@@ -1,3 +1,9 @@
+2003-01-16  John Dallaway  <jld@ecoscentric.com>
+
+	* standalone/wxwin/ecutils.cpp: #include <errno.h>
+	
+	* standalone/wxwin/filename.h: Make header macro unique
+
 2002-09-21  Bart Veer  <bartv@ecoscentric.com>
 
 	* common/common/build.cxx:
